[package]
name = "mcdata-rs"
version = "0.1.3"
edition = "2021"
authors = ["firejoust <deity-sapling-coma@duck.com>"]
description = "Library to access Minecraft data provided by PrismarineJS/minecraft-data"
license = "MIT"
repository = "https://github.com/firejoust/mcdata-rs"
readme = "README.md"
keywords = ["minecraft", "data", "protocol", "gamedata"]
categories = ["games", "parser-implementations"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
dirs-next = "2.0.0"
env_logger = "0.11.11"
log = "0.4.33"
once_cell = "1.21.4"
reqwest = { version = "0.13.4", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
zip = "8.6.0"
